--- a/project.html
+++ b/project.html
@@ -38,7 +38,7 @@
 
     <div class="about-me">
 
-      <img src="p1.jpg" style="max-width: 400px;
+      <img src="ruai.jpg" style="max-width: 400px;
       border-radius: 10px;
       margin-right: 30px;
       margin: 10px;" alt="me"><br><br>
@@ -54,7 +54,7 @@
 
     <div class="about-me">
 
-      <img src="P2.jpg" style=" max-width: 400px;
+      <img src="sag.jpg" style=" max-width: 400px;
       border-radius: 10px;
       margin-right: 30px;
       margin: 10px;"><br><br>
@@ -71,7 +71,7 @@
 
     <div class="about-me">
 
-      <img src="P3.jpg" style=" max-width: 400px;
+      <img src="fateh.jpg" style=" max-width: 400px;
       border-radius: 10px;
       margin-right: 30px;
       margin: 10px;" alt="me"><br><br>
@@ -87,7 +87,7 @@
 
     <div class="about-me">
 
-      <img src="P5.jpg" style=" max-width: 400px;
+      <img src="mash.jpg" style=" max-width: 400px;
         border-radius: 10px;
         margin-right: 30px;
         margin: 10px;" alt="me"><br><br>
@@ -102,7 +102,7 @@
 
     <div class="about-me">
 
-      <img src="p6.png" style="max-width: 400px;
+      <img src="debt.png" style="max-width: 400px;
         border-radius: 10px;
         margin-right: 30px;
         margin: 10px;" alt="me"><br><br>
